@@ -3,7 +3,7 @@
  *
  * v1.0 originally written by Gregory Demar
  *
- * @copyright  Copyright (c) 2003-2018 Coppermine Dev Team
+ * @copyright  Copyright (c) 2003-2019 Coppermine Dev Team
  * @license    GNU General Public License version 3 or later; see LICENSE
  *
  * CHANGELOG.txt
@@ -20,6 +20,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2019-01-26 [B] Correct upload issue by removing memory_limit from HTML5 max upload size calculation {ron4mac}
 2018-12-22 [O,M] Updated version check to a functioning condition {ron4mac}
 2018-12-22 [O,A] Changed Admin Tools to drop-in widgets {ron4mac}
 2018-12-21 [S] Fixed XSS issue {eenemeenemuu}
